src/objects/Arbol_Decision__c.object
<CustomObject>
    <fields>
        <fullName>ADC_FOR_Compania_Id__c</fullName>
        <formula>ADC_LKP_Producto_CIA__r.PRD_FOR_CompaniaId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADC_FOR_Compania__c</fullName>
        <formula>ADC_LKP_Producto_CIA__r.PRD_FOR_Compania__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADC_FOR_Tipo_Producto__c</fullName>
        <formula>TEXT(ADC_LKP_Producto_CIA__r.PRD_LKP_Tipo_Producto_CIA__r.TPR_SEL_Tipo_Producto__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADC_LKP_Producto_CIA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Producto_CIA__c</referenceTo>
        <relationshipName>Arbol_de_Decisi_n_Cabecera</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADC_NUM_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Versión</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADC_SEL_Estado__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estados_Arbol_de_Decision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADC_TXT_Identificador__c</fullName>
        <description>Identificador externo compuesto por la concatenación de: [Id CIA]_[Id Producto]_[FASE]_[Version]</description>
        <externalId>true</externalId>
        <label>Identificador (Ext Id)</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Árbol de Decisión</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADC_FOR_Compania_Id__c</columns>
        <columns>ADC_FOR_Compania__c</columns>
        <columns>ADC_LKP_Producto_CIA__c</columns>
        <columns>ADC_FOR_Tipo_Producto__c</columns>
        <columns>ADC_NUM_Version__c</columns>
        <columns>ADC_SEL_Estado__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>ADC{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Árboles de Decisión</pluralLabel>
    <recordTypes>
        <fullName>Apertura</fullName>
        <active>true</active>
        <label>Apertura</label>
    </recordTypes>
    <recordTypes>
        <fullName>Confirmacion</fullName>
        <active>true</active>
        <label>Confirmacion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(ADC_TXT_Identificador__c), ADC_TXT_Identificador__c &lt;&gt; ADC_LKP_Producto_CIA__r.PRD_FOR_CompaniaId__c + &apos;_&apos; + ADC_LKP_Producto_CIA__r.PRD_TXT_Cod_Producto__c + &apos;_&apos; + RecordType.DeveloperName + &apos;_&apos; + TEXT(ADC_NUM_Version__c)), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>